--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generates a grocery list from user-input meals",
   "main": "index.js",
   "scripts": {
+    "build": "babel groceries.js -o groceries.js && babel test/ -d test",
     "doc": "jsdoc -R ReadMe.md groceries.js -d docs/",
     "test": "mocha",
     "go": "node index.js"
@@ -14,6 +15,10 @@
     "axios": "^0.20.0"
   },
   "devDependencies": {
-    "jsdoc": "^3.6.5"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "chai": "^4.2.0",
+    "jsdoc": "^3.6.5",
+    "mocha": "^8.1.3"
   }
 }
