--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.20.0"
   },
   "devDependencies": {
-    "jsdoc": "^3.6.5"
+    "chai": "^4.2.0",
+    "jsdoc": "^3.6.5",
+    "mocha": "^8.1.3"
   }
 }
