--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel index.js -o index.js && babel groceries.js -o groceries.js && babel meal.js -o meal.js && babel test/ -d test",
+    "format": "js-beautify -s 2 -r *.js **/*.js",
     "doc": "jsdoc -R ReadMe.md . -d docs/",
     "test": "mocha",
     "go": "node index.js"
@@ -18,6 +19,7 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "chai": "^4.2.0",
+    "js-beautify": "^1.13.0",
     "jsdoc": "^3.6.5",
     "mocha": "^8.1.3"
   }
