--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Andy Gnias",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^0.20.0",
+    "fuzzy-matching": "^0.4.3",
+    "title-case": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
